Fix wrapping of url

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -529,6 +529,7 @@ h4.example-link {
 
   &:nth-child(2) {
     max-width: 250px;
+    word-wrap: break-word;
   }
 
   span.not-provided {
